--- a/simulado-29-10-2018/exercicio2/index.css
+++ b/simulado-29-10-2018/exercicio2/index.css
@@ -1,63 +1,73 @@
 html {
-    padding: 0 25px;
-    background-color: #252830;
-    font-family: helvetica;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-  font-weight: bold;
+  color: white;
+  margin: 0;
+  padding: 0;
+  background: #252830;
+  font-family: helvetica;
 }
 
 body {
   margin: 0;
-  padding: 25px;
-  min-height: 80%;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 6fr 1fr;
+  grid-template-rows: auto 1fr auto;
 }
 
-body > h1 {
-  margin-top: 0;
+header { 
+  /*background-color: crimson; */
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+nav { 
+  /*background-color: skyblue;*/
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+nav ul {
+  padding: 0;
+  background-color: darkslateblue;
+  height: auto;
+  border: 3px solid slateblue;
+}
+
+nav ul li {
   display: inline-block;
-  color: deepskyblue;
 }
 
-body > h1:hover {
-  color: skyblue;
-  transition-duration: 0.51s;
+nav ul li.active, nav ul li:hover {
+  background-color: slateblue;
 }
 
-article {
-  border-left: 30px solid lime;
-  background-color: grey;
+nav ul li a {
+  text-decoration: none;
   color: white;
-  padding: 20px 20px;
-  margin-bottom: 10px;
+  font-weight: bold;
+  display: block;
 }
 
-article:hover {
-  border-color: deepskyblue;
-  transition-duration: 0.51s;
+main { 
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
 }
 
-article:hover > h3 {
-  color: deepskyblue;
-  transition-duration: 0.51s;
+main article {
+  color: #fff;
+  background-color: limegreen; 
+  border-left: 30px solid lime;
+  padding: 10px 25px;
+  margin-bottom: 20px;
+  text-align: justify;
 }
 
-article > h3 {
-  margin-top: 0;
-  margin-bottom: 5px;
-  color: lime;
-  font-weight: bolder;
-}
-
-article > p {
-  margin: 0;
-}
-
-footer {
-  padding: 25px;
-  background-color: lime;
-  text-align: center;
+footer { 
+  /*background-color: darkmagenta; */
+  grid-column: 1 / 4;
+  grid-row: 4 / 5;
+  margin-top: 60px;
+  border-top: 3px solid slateblue;
+  background-color: darkslateblue;
+  padding: 40px 40px;
 }
