--- a/simulado-29-10-2018/exercicio2/index.css
+++ b/simulado-29-10-2018/exercicio2/index.css
@@ -3,7 +3,7 @@ html {
   margin: 0;
   padding: 0;
   background: #252830;
-  font-family: helvetica;
+  font-family: sans-serif;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
   padding: 0;
   display: grid;
   grid-template-columns: 1fr 6fr 1fr;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: auto auto 1fr 1fr;
 }
 
 header { 
@@ -35,6 +35,7 @@ nav ul {
 
 nav ul li {
   display: inline-block;
+  padding: 10px 20px;
 }
 
 nav ul li.active, nav ul li:hover {
@@ -45,7 +46,6 @@ nav ul li a {
   text-decoration: none;
   color: white;
   font-weight: bold;
-  display: block;
 }
 
 main { 
@@ -55,11 +55,17 @@ main {
 
 main article {
   color: #fff;
-  background-color: limegreen; 
-  border-left: 30px solid lime;
+  background-color: slateblue; 
+  border-left: 30px solid darkslateblue;
   padding: 10px 25px;
   margin-bottom: 20px;
   text-align: justify;
+}
+
+article:hover {
+  background-color: palevioletred;
+  transition-duration: 0.5s;
+  border-color: white;
 }
 
 footer { 
