--- a/site/index.css
+++ b/site/index.css
@@ -1,79 +1,77 @@
+/** { margin: 0; padding: 0; }*/
+
 html {
+  background-color: #252525;
   color: white;
-  margin: 0;
-  padding: 0;
-  background: #252830;
   font-family: sans-serif;
+  height: 100%;
+  padding: 0; margin: 0;
 }
 
 body {
-  margin: 0;
-  padding: 0;
   display: grid;
-  grid-template-columns: 1fr 6fr 1fr;
-  grid-template-rows: auto auto 1fr 1fr;
+  grid-template-rows: min-content min-content 1fr min-content;
+  min-height: 100%;
+  padding: 0; margin: 0;
 }
 
-header { 
-  /*background-color: crimson; */
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
+body > * {
+  padding: 20px 40px;
 }
 
-nav { 
-  /*background-color: skyblue;*/
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
+header {
+  background-color: slateblue;
+  margin: 0;
+}
+
+nav {
+  padding: 0 20px;
+  margin: 0;
+  background-color: slateblue;
 }
 
 nav ul {
-  padding: 0;
-  background-color: darkslateblue;
-  height: auto;
-  border: 3px solid slateblue;
+  padding: 10px 0;
+  margin: 0;
 }
 
 nav ul li {
   display: inline-block;
-  padding: 10px 20px;
-}
-
-nav ul li.active, nav ul li:hover {
-  background-color: slateblue;
 }
 
 nav ul li a {
   text-decoration: none;
+  font-weight: bolder;
   color: white;
-  font-weight: bold;
+  background-color: slateblue;
+  padding: 10px 20px;
 }
 
-main { 
-  grid-column: 2 / 3;
-  grid-row: 3 / 4;
-}
-
-main article {
-  color: #fff;
-  background-color: slateblue; 
-  border-left: 30px solid darkslateblue;
-  padding: 10px 25px;
-  margin-bottom: 20px;
-  text-align: justify;
-}
-
-article:hover {
-  background-color: palevioletred;
+nav ul li a:hover {
+  color: darkslateblue;
   transition-duration: 0.5s;
-  border-color: white;
 }
 
-footer { 
-  /*background-color: darkmagenta; */
-  grid-column: 1 / 4;
-  grid-row: 4 / 5;
-  margin-top: 60px;
-  border-top: 3px solid slateblue;
-  background-color: darkslateblue;
-  padding: 40px 40px;
+nav ul li a.active {
+  color: darkslateblue;
 }
+
+main {
+  padding-bottom: 30px;
+  padding-top: 30px;
+}
+
+main > * {
+  margin-bottom: 30px;
+}
+
+footer {
+  background-color: darkslateblue;
+  padding: 0px 40px;
+}
+
+footer > p { font-weight: bold; }
